chore: prettify code

--- a/src/app/discover-pokémons/presentation/pokemon-list/pokemon-list.html
+++ b/src/app/discover-pokémons/presentation/pokemon-list/pokemon-list.html
@@ -1,5 +1,5 @@
 <ul>
-  @for(pokemon of (pokemonList | async); track pokemon.name) {
+  @for (pokemon of pokemonList | async; track pokemon.name) {
     <li>
       <app-pokemon-full-image [pokemon]="pokemon" />
     </li>
