--- a/src/app/discover-pokémons/ui/pokemon-full-image/pokemon-full-image.html
+++ b/src/app/discover-pokémons/ui/pokemon-full-image/pokemon-full-image.html
@@ -1,2 +1,7 @@
 @let entity = pokemon();
-<img [ngSrc]="entity.shinyImgUrl" width="256" height="256" [attr.alt]="entity.name" />
+<img
+  [ngSrc]="entity.shinyImgUrl"
+  width="256"
+  height="256"
+  [attr.alt]="entity.name"
+/>
