--- a/src/app/discover-pokémons/presentation/pokemon-list/pokemon-list.scss
+++ b/src/app/discover-pokémons/presentation/pokemon-list/pokemon-list.scss
@@ -1,1 +1,6 @@
-ul { list-style: none; display: flex; flex-wrap: wrap; gap: 1rem; }
+ul {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
