--- a/src/app/discover-pokémons/presentation/pokemon-list/pokemon-list.html
+++ b/src/app/discover-pokémons/presentation/pokemon-list/pokemon-list.html
@@ -1,7 +1,26 @@
-<ul>
-  @for (pokemon of pokemonList | async; track pokemon.name) {
-    <li>
-      <app-pokemon-full-image [pokemon]="pokemon" />
-    </li>
+@let list = pokemonList | async;
+@if (list) {
+  @if (list.length === 0) {
+    <p>Keine Pokémons gefunden.</p>
+  } @else {
+    <ul>
+      @for (pokemon of pokemonList | async; track pokemon.name) {
+        <li>
+          @defer (on viewport) {
+            <app-pokemon-full-image [pokemon]="pokemon" />
+          } @placeholder (minimum 300ms) {
+            <div class="pokemon-placeholder">
+              <p>{{ pokemon.name | uppercase }}</p>
+            </div>
+          }
+        </li>
+      }
+    </ul>
+    <hr
+      style="visibility: hidden"
+      (appObserveIntersection)="loadMorePokemon($event)"
+    />
   }
-</ul>
+} @else {
+  <p>Lade Pokémons ...</p>
+}
