--- a/src/app/discover-pokémons/presentation/pokemon-list/pokemon-list.scss
+++ b/src/app/discover-pokémons/presentation/pokemon-list/pokemon-list.scss
@@ -1,6 +1,23 @@
 ul {
   list-style: none;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(256px, 1fr));
   gap: 1rem;
+  padding: 0;
+  margin: 0;
+}
+
+.pokemon-placeholder {
+  height: 256px;
+  width: 256px;
+  border-radius: 5%;
+  color: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.125);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &.loading {
+    background: rgba(255, 0, 0, 0.125);
+  }
 }
