--- a/src/app/discover-pokemons/ui/pokemon-full-image/pokemon-full-image.html
+++ b/src/app/discover-pokemons/ui/pokemon-full-image/pokemon-full-image.html
@@ -1,7 +1,7 @@
 @let entity = pokemon();
 <img
   [ngSrc]="entity.shinyImgUrl"
-  width="256"
-  height="256"
+  [width]="size()"
+  [height]="size()"
   [attr.alt]="entity.name"
 />
