--- a/src/app/discover-pokemons/ui/pokemon-full-image/pokemon-full-image.html
+++ b/src/app/discover-pokemons/ui/pokemon-full-image/pokemon-full-image.html
@@ -1,7 +1,6 @@
-@let entity = pokemon();
 <img
-  [ngSrc]="entity.shinyImgUrl"
+  [ngSrc]="imageUrl()"
   [width]="size()"
   [height]="size()"
-  [attr.alt]="entity.name"
+  [attr.alt]="pokemon().name"
 />
