feat(pokemons): add more generic pipes

--- a/src/app/discover-pokemons/presentation/pokemon-list/pokemon-list.html
+++ b/src/app/discover-pokemons/presentation/pokemon-list/pokemon-list.html
@@ -7,7 +7,7 @@
       @for (pokemon of list; track pokemon.id) {
         <li>
           <button
-            [class]="pokemon.types.join(' ')"
+            [class]="pokemon.types | join: ' '"
             [routerLink]="['/', 'discover-pokemons', 'details', pokemon.name]"
           >
             @defer (on viewport) {
