--- a/src/app/discover-pokemons/ui/pokemon-full-image/pokemon-full-image.html
+++ b/src/app/discover-pokemons/ui/pokemon-full-image/pokemon-full-image.html
@@ -1,6 +1,7 @@
 <img
-  [ngSrc]="imageUrl()"
-  [width]="size()"
+  [src]="imageUrl()"
+  loading="lazy"
   [height]="size()"
+  [width]="size()"
   [attr.alt]="pokemon().name"
 />
