feat(pokemons): use signal as state ref

--- a/src/app/discover-pokemons/presentation/pokemon-list/pokemon-list.html
+++ b/src/app/discover-pokemons/presentation/pokemon-list/pokemon-list.html
@@ -1,4 +1,4 @@
-@let list = pokemonList$ | async;
+@let list = pokemonList$();
 @if (list) {
   @if (list.length === 0) {
     <p>Keine Pokemons gefunden.</p>
